# TOPCONS2

./: .dockerignore  .gitignore  Dockerfile  README.md
topcons2_webserver/: .dockerignore  Dockerfile  install_blastdb.sh  run_octopus.sh  run_topcons2.sh
topcons2_webserver/predictors/Philius/: jt_info.txt  philius_convert.pl  runPhilius.sh  runPhilius.sh.mod
topcons2_webserver/predictors/PolyPhobius/: README  blastget  homologhmm  jphobius  run_polyphobius.pl
topcons2_webserver/predictors/scampi-msa/: DGHMM_KR_21_multi.hmg  DGHMM_KR_21_multi.txt  modhmms_scampi  modhmmxml2top  run_SCAMPI_MSA.pl
topcons2_webserver/predictors/source/modhmm/: CMakeLists.txt  README  fresh_install.sh
topcons2_webserver/predictors/source/modhmm/src/blastscripts/: mod2modquery.pl  msa2prf.sh.cmake  mtx2prf.pl  mtx2prf.sh.cmake  run_blast.sh  run_psiblast.sh
topcons2_webserver/predictors/source/modhmm/src/c/: CMakeLists.txt  add_alphabet.c  build_gengetopt.sh  config.h.cmake  core_algorithms_multialpha.c  debug_funcs.c  funcs.h  modhmms.c  modhmmt.c  modseqalign.c  readhmm.c  readhmm_multialpha.c  readseqs_multialpha.c  savehmm.c  savehmm_multialpha.c  script.nsi.cmake  std_calculation_funcs.c  std_funcs.c  structs.h  training_algorithms_multialpha.c
topcons2_webserver/predictors/source/modhmm/src/c/gengetopt/: cmdline_add_alphabet.ggo.cmake  cmdline_modhmms.ggo.cmake  cmdline_modhmmt.ggo.cmake  cmdline_modseqalign.ggo.cmake
topcons2_webserver/predictors/source/modhmm/src/c/test/octopus/test1/: CMakeLists.txt  NNZHMM_io_reent_hairpin.hmg  NNZHMM_io_reent_hairpin.hmg.res  hmg.list  query.list  query.prf  replacement_letter_multi.rpl  test.sh
topcons2_webserver/predictors/source/modhmm/src/c/test/scampi/test1/: 1.fa  2.fa  3.fa  4.fa  5.fa  CMakeLists.txt  DGHMM_KR_21_single.1.hmg  DGHMM_KR_21_single.1.hmg.res  hmg.list  snf.1  test.sh
topcons2_webserver/predictors/source/modhmm/src/c/test/spoctopus/test1/: CMakeLists.txt  NNZHMM_io_reent_hairpin_sigpep.hmg.res  hmg.list  query.list  query.prf  test.sh
topcons2_webserver/predictors/source/modhmm/src/data/: CMakeLists.txt
topcons2_webserver/predictors/source/modhmm/src/docbook/: .htaccess  CMakeLists.txt  README  index.xml.cmake  params.xsl
topcons2_webserver/predictors/source/modhmm/src/docbook/commands/: add_alphabet_help  modhmms_help  modhmmt_help  modseqalign_help
topcons2_webserver/predictors/source/modhmm/src/docbook/example_files/: file.modhmm-alphabet  file.modhmm-frequency  file.modhmm-name-file  file.modhmm-null-model  file.modhmm-prior  file.modhmm-replacement-letter  file.modhmm-subst-mtx  hmg-header  hmg-modules  seq-multiple-alphabet.modhmm-msa-discrete  seq-multiple-alphabet.modhmm-s-continuous  seq-multiple-alphabet.modhmm-s-discrete  seq.modhmm-fa  seq.modhmm-msa-continuous  seq.modhmm-msa-discrete  seq.modhmm-prf  seq.modhmm-s-continuous  seq.modhmm-s-discrete
topcons2_webserver/predictors/source/modhmm/src/docbook/images/: clustermod.eps  forwardmod.eps  forwardmod_alt.eps  highwaymod.eps  plan7mod.eps  plan9mod.eps  singleloopmod.eps  singlenodemod.eps  uturnmod.eps
topcons2_webserver/predictors/source/modhmm/src/java/: BetaGamma.html  BetaGamma.java  Cluster.html  Cluster.java  Constants.html  Constants.java  DataReaderMultiAlpha.html  DataReaderMultiAlpha.java  Emission.html  Emission.java  Forward_alt.html  Forward_alt.java  Forward_std.html  Forward_std.java  HMM.html  HMM.java  HMMConstruct.java  HMMSaver.html  HMMSaver.java  Highway.html  Highway.java  InternalInitDistrib.html  InternalInitDistrib.java  ModelMaker.html  ModelMaker.java  Module.html  Module.java  P.html  P.java  Polynomial.html  Polynomial.java  Profile7.html  Profile7.java  Profile9.html  Profile9.java  SingleLoop.html  SingleLoop.java  SingleNode.html  SingleNode.java  Transition.html  (+18 more)
topcons2_webserver/predictors/source/modhmm/src/shellscripts/: CMakeLists.txt  modhmmxml2res  modhmmxml2top
topcons2_webserver/predictors/source/modhmm/src/xslt/: CMakeLists.txt  xml2res.xsl
topcons2_webserver/predictors/spoctopus/: OCTOPUS.sh  README  SPOCTOPUS.sh  create_Bloctopus_output.sh  exec_times-OCTOPUS.sh.txt  modhmm  msa62fasta_oneround.pl  name.list  oneline.pl  oneline_sp.pl  scampi_modhmmres.xml
topcons2_webserver/predictors/topcons/: TOPCONS.sh  oneline.pl  reliability_score.py  test.txt  topcons_make_prf.py
topcons2_webserver/test/: multiple_seqs.fasta  one_seq.fasta
topcons2_webserver/test/out2/: time.txt
topcons2_webserver/test/rst_multiple_seqs/: time.txt
topcons2_webserver/test/rst_one_seq/: time.txt
topcons2_webserver/tools/dgpred_standalone/: README.txt  bakfile.sh  dG_predTM.pl  myscanDG.pl
topcons2_webserver/workflow/: OutLine.md  README.md  batch_run.txt  cdd_scan_to_profile.py  check_if_ntm.py  correct_Topo.py  create_topcons_plot.pl  dump_prediction.py  fa2prfs_fallback.sh  fa2prfs_fallback_v2.sh  fa2prfs_hmmscan.sh  fa2prfs_pfamscan.sh  fa2prfs_pfamscan_v2.sh  libtopologycmp.py  median.py  module_locator.py  mtx2prf.pl  my_uniqueseq.py  mydb_common.py  myfunc.py  pfam_scan_to_profile.py  pfam_workflow.py  pfam_workflow_octopus.py  test.pfam  test.txt  time.txt  time_cyto_set.txt  time_sp_set.txt  time_sp_set_uniref.txt  time_sp_tm.txt  time_tm_new_hmm.txt  time_tm_set.txt  time_tm_uniref.txt  topcons2_to_fasta.py
topcons2_webserver/workflow/bak/: convert_psi_to_prf-2015-02-05-19.30.48.py  copy_final_topo-2015-02-05-19.30.48.py  create_topcons_plot-2015-02-07-00.00.44.pl  create_topcons_plot-2015-02-07-01.33.52.pl  msa62fasta_oneround-2015-02-05-19.30.48.pl  msa62mod_oneround-2015-02-05-19.30.48.pl  msa62mod_oneround_v2-2015-02-05-19.30.48.pl  my_uniqueseq-2015-02-05-19.30.48.py  mybase-2015-02-05-19.30.48.py  myfunc-2015-02-02-15.38.59.py  myfunc-2015-02-05-19.30.48.py  pfam_scan_to_profile-2015-02-05-19.30.48.py  pfam_scan_to_profile-2015-02-06-19.58.08.py  pfam_workflow-2015-02-06-20.11.58.py  pfam_workflow-2015-02-06-23.30.25.py  pfam_workflow-2015-02-09-14.21.56.py
topcons2_webserver/workflow/modhmmblast/: msa2prf.sh  run_blast.sh  run_psiblast.sh
topcons2_webserver/workflow/test/: .log1.txt.swp  (+1 more)
(+275 files in other folders)
