# some text

file(GLOB conffiles RELATIVE  ${CMAKE_CURRENT_SOURCE_DIR}/ ${CMAKE_CURRENT_SOURCE_DIR}/[^.]*  PATTERN "*/.svn" EXCLUDE  PATTERN "*/.svn/*" EXCLUDE )
foreach(i ${conffiles})
  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/${i} ${CMAKE_CURRENT_BINARY_DIR}/${i} @ONLY)
endforeach(i)

install(DIRECTORY  ${CMAKE_CURRENT_BINARY_DIR}/ DESTINATION ${CMAKE_INSTALL_PREFIX}/bin FILE_PERMISSIONS ${PERMS} DIRECTORY_PERMISSIONS ${PERMS} PATTERN ".svn" 
EXCLUDE PATTERN "*~" EXCLUDE  PATTERN "CMake*" EXCLUDE  PATTERN "Makefile" EXCLUDE  PATTERN "cmake*" EXCLUDE  PATTERN "CTest*" EXCLUDE  )
